# boot.dev

./: README.md  main.go
courses/learn-go/datetest/: datetest  go.mod
courses/learn-go/hellogo/: go.mod  hellogo  main.go
courses/learn-go/mystrings/: go.mod
courses/learn-http-servers/: go.mod  main.go
internal/repl/: repl_test.go
projects/ai-agent/: README.md  pyproject.toml
projects/ai-agent/src/: config.py  function_schema.py  main.py  utils.py
projects/ai-agent/src/calculator/: README.md
projects/ai-agent/src/functions/: call_function.py  get_file_content.py  get_files_info.py  run_python_file.py  write_file.py
projects/asteroids/: asteroid.py  circleshape.py  main.py  player.py  shot.py
projects/book-bot/: main.py  stats.py
projects/pokedex/: README.md  go.mod  main.go
projects/pokedex/internal/repl/: repl.go
